--- a/memorias.html
+++ b/memorias.html
@@ -170,7 +170,7 @@
       <img src="eu1.jpeg" alt="Foto 1">
       <img src="eu2.jpeg" alt="Foto 2">
       <img src="eu3.jpeg" alt="Foto 3">
-      <img src="eude4.jpeg" alt="Foto 4">
+      <img src="eu5.jpeg" alt="Foto 4">
     </div>
 
     <a href="index.html" class="nav-button">🏠 Voltar para a Página Inicial</a>
